index final completo

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div>
             <header class="header">
                 <h1 id="titulo">Cupcakes Almita</h1> 
-                <a href="/views/seccion.html" class="button">Origen</a>
-                <a href="/views/imageneshalloween.html" class="button">Imagenes halloween</a>
-                <a href="/views/paginaInstagram.html" class="button">Página instagram</a>
-                <a href="/views/encargosyenvios.html" class="button">Encargos y envios</a>
+                <a href="views/seccion.html" class="button">Origen</a>
+                <a href="views/imageneshalloween.html" class="button">Imagenes halloween</a>
+                <a href="views/paginaInstagram.html" class="button">Página instagram</a>
+                <a href="views/encargosyenvios.html" class="button">Encargos y envios</a>
                 <a href="views/api.html" class="button">Api comida</a>
             </header>
         </div>
